tests/baselines/reference/jsdocCatchClauseWithTypeAnnotation.errors.txt
foo.js(20,54): error TS2339: Property 'foo' does not exist on type 'unknown'.
foo.js(21,54): error TS2339: Property 'foo' does not exist on type 'unknown'.
foo.js(22,31): error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
foo.js(23,31): error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
foo.js(35,7): error TS2492: Cannot redeclare identifier 'err' in catch clause.
foo.js(46,45): error TS2339: Property 'x' does not exist on type '{}'.
foo.js(47,45): error TS2339: Property 'x' does not exist on type '{}'.
foo.js(48,31): error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
foo.js(49,31): error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.


==== foo.js (9 errors) ====
    /**
     * @typedef {any} Any
     */
    
    /**
     * @typedef {unknown} Unknown
     */
    
    function fn() {
        try { } catch (x) { }                                            // should be OK
        try { } catch (/** @type {any} */ err) { }                       // should be OK
        try { } catch (/** @type {Any} */ err) { }                       // should be OK
        try { } catch (/** @type {unknown} */ err) { }                   // should be OK
        try { } catch (/** @type {Unknown} */ err) { }                   // should be OK
        try { } catch (err) { err.foo; }                                 // should be OK
        try { } catch (/** @type {any} */ err) { err.foo; }              // should be OK
        try { } catch (/** @type {Any} */ err) { err.foo; }              // should be OK
        try { } catch (/** @type {unknown} */ err) { console.log(err); } // should be OK
        try { } catch (/** @type {Unknown} */ err) { console.log(err); } // should be OK
        try { } catch (/** @type {unknown} */ err) { err.foo; }          // error in the body
                                                         ~~~
!!! error TS2339: Property 'foo' does not exist on type 'unknown'.
        try { } catch (/** @type {Unknown} */ err) { err.foo; }          // error in the body
                                                         ~~~
!!! error TS2339: Property 'foo' does not exist on type 'unknown'.
        try { } catch (/** @type {Error} */ err) { }                     // error in the type
                                  ~~~~~
!!! error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
        try { } catch (/** @type {object} */ err) { }                    // error in the type
                                  ~~~~~~
!!! error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
    
        try { console.log(); }
        // @ts-ignore
        catch (/** @type {number} */ err) { // e should not be a `number`
            console.log(err.toLowerCase());
        }
    
    	// minor bug: shows that the `catch` argument is skipped when checking scope
    	try { }
    	catch (err) {
    		/** @type {string} */
    		let err;
    		    ~~~
!!! error TS2492: Cannot redeclare identifier 'err' in catch clause.
    	}
    	try { }
    	catch (err) {
    		/** @type {boolean} */
    		var err;
    	}
    
        try { } catch ({ x }) { }                                        // should be OK
        try { } catch (/** @type {any} */ { x }) { x.foo; }              // should be OK
        try { } catch (/** @type {Any} */ { x }) { x.foo;}               // should be OK
        try { } catch (/** @type {unknown} */ { x }) { console.log(x); } // error in the destructure
                                                ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        try { } catch (/** @type {Unknown} */ { x }) { console.log(x); } // error in the destructure
                                                ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        try { } catch (/** @type {Error} */ { x }) { }                   // error in the type
                                  ~~~~~
!!! error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
        try { } catch (/** @type {object} */ { x }) { }                  // error in the type
                                  ~~~~~~
!!! error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
    }
    